# backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: dev-cicd.yml  main-cicd.yml
alembic/: env.py
alembic/versions/: 0c28d35b2aa8_.py  0c34c18923e6_.py  3b7d061f4b5c_.py  7b549b680de6_.py  b429222469a3_.py  d3c879ac3509_.py
app/: __init__.py  deps.py  enum.py  exception_handlers.py  exceptions.py  main.py  orm.py  schemas.py  utils.py
app/base/: auth.py  config.py  db.py  provider.py
app/repositories/: calendar.py  contact.py  user.py
app/services/: calendar.py  contact.py  user.py
app/views/: __init__.py  calendar.py  contact.py  user.py
scripts/: run-server.sh  up.sh
