[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daco2020 <dacokim32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
orjson = "^3.9.7"
sqlalchemy = "^2.0.21"
pyjwt = "^2.8.0"
requests = "^2.31.0"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
greenlet = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
pytest = "^7.4.2"
mypy = "^1.5.1"
pytest-sugar = "^0.9.7"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
